<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.ListDataActivity">
<!-- Aqui é o layout da lista de estudos -->

    <TextView
        android:id="@+id/txtTitle"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:textSize="24sp"
        android:textColor="#4D76AC"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/txtsubTitle"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtsubTitle"
        android:textSize="16sp"
        android:textColor="#4D76AC"
        android:gravity="center"
        />


    <!-- RecyclerView -->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="32dp"
        android:padding="16dp" />


    <Button
        android:id="@+id/btnAdd"
        android:layout_width="348dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#252561"
        android:text="@string/add_topic"
        android:layout_gravity="center"
        android:textColor="#ffffff" />
</LinearLayout>
