<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".activities.RegisterActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="204dp"
        android:layout_height="253dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:src="@drawable/list" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title_insert_topic"
        android:textSize="24sp"
        android:textColor="#607D8B"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edtTopic"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_gravity="center"
        android:hint="Escreva aqui o tópico desejado"
        android:inputType="text" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#252561"
        android:textColor="#ffffff"
        android:background="@drawable/rounded_button"
        android:text="@string/add_topic" />

    <Button
        android:id="@+id/btnListAll"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:backgroundTint="#4C4799"
        android:textColor="#ffffff"
        android:background="@drawable/rounded_button"
        android:text="@string/visualizar_minha_trilha" />


    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:backgroundTint="#4D76AC"
        android:textColor="#ffffff"
        android:background="@drawable/rounded_button"
        android:text="EDITAR LISTA" />


</LinearLayout>